# qwen3-voice-studio

./: .gitignore  README.md  app.py  knowledge-graph.md  plan.md  pyproject.toml  requirements-gpu.txt  requirements.txt  spec.md  start.ps1  start.sh
gui/: __init__.py  app_ui.py  batch_tab.py  custom_voice_tab.py  error_panel.py  history_tab.py  monitor_tab.py  settings_tab.py  tts_tab.py  voice_clone_tab.py  voice_design_tab.py  voice_tab.py  workflow_tab.py  youtube_tab.py
src/: audio_utils.py  config.py  error_handler.py  history.py  i18n.py  model_manager.py  monitor.py  multi_engine.py  srt_generator.py  tts_engine.py  tts_server.py  voice_library.py
tests/: conftest.py  test_audio_utils.py  test_config.py  test_error_handler.py  test_history.py  test_i18n.py  test_srt.py  test_srt_generator.py
utils/: __init__.py  srt_generator.py
