[project]
name = "qwen3-voice-studio"
version = "1.0.0"
description = "Professional TTS GUI application powered by Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    "gradio>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "torch>=2.1",
    "torchaudio>=2.1",
    "soundfile>=0.12",
    "numpy>=1.24",
    # qwen-tts 0.1.1 requires transformers==4.57.3; hub must be <1.0
    "huggingface-hub>=0.34.0,<1.0",
    "transformers==4.57.3",
    "qwen-tts",
    "librosa>=0.10",
    "scipy>=1.10",
    "einops>=0.7",
    "accelerate>=0.30",
    # onnxruntime 1.24+ 無 cp310 wheel，限制上限
    "onnxruntime<1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiofiles>=24.1",
    "psutil>=5.9",
    "yt-dlp>=2026.3",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5",
]

[project.scripts]
qwen3-voice-studio = "app:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
